--- a/templates/new.html
+++ b/templates/new.html
@@ -156,9 +156,9 @@
           </select>
         </div>
         {% if user["is_logged_in"] %}
-        <button type="submit" href="/">Submit</button>
+        <button type="submit" >Submit</button>
         {% else %}
-        <button type="submit" class="btn" disabled>RATE</button>
+        <button type="submit" disabled>Submit</button>
         {%endif%}
       </form>
     </div>
